# minGRU-torch

./: README.md  pyproject.toml  requirements.txt
src/minGRU_torch/: __init__.py  configuration_minGRU.py  modelling_minGRU.py
src/minGRU_torch/modeling/: configuration_minGRU.py  modeling_minGRU.py
test/: forward_with_cache.py  gru_caching.py  gru_ops.py  gru_padding.py  playground.py  test.py  usage_code.py
